--- a/index.html
+++ b/index.html
@@ -52,23 +52,23 @@
     <div class="container">
       <div class="row" style="margin-top: 15%">
         <div class="one-third column value">
-          <h5>März 2020</h5>
+          <h5>12. März 2020</h5>
           <h2 class="value-multiplier">Datenbanken</h2>
-          <p class="value-description">Fallstricke in der Arbeiten mit bibliometrischen Datenbanken des Kompetenzzentrum Bibliometrie</p>
+          <p class="value-description">Fallstricke beim Arbeiten mit bibliometrischen Datenbanken des Kompetenzzentrum Bibliometrie</p>
           <p>Veranstalter: SINBRI, DZHW und KU Leuven</p>
           <p>Ort: DZHW Berlin</p>
         </div>
         <div class="one-third column value">
           <h5>2. &mdash; 3. Juli 2020</h5>
           <h2 class="value-multiplier">Dokumentation</h2>
-          <p class="value-description">Nachvollziehbare Dokumentation der statistischen Analysen mit R Markdown und Jupyter Notebooks</p>
+          <p class="value-description">Nachvollziehbare Dokumentation  quantitativer Analysen mit R Markdown und Jupyter Notebooks</p>
           <p>Veranstalter: OAUNI, SUB Göttingen und Universität Bielefeld</p>
           <p>Ort: SUB Göttingen</p>
         </div>
         <div class="one-third column value">
           <h5>Herbst 2020</h5>
           <h2 class="value-multiplier">Archivierung</h2>
-          <p class="value-description">Reproduzierbarkeit und Archivierung quantitativer Analysen und Daten mit Diensten GESIS Notebooks und Datorium</p>
+          <p class="value-description">Reproduzierbarkeit und Archivierung quantitativer Analysen und Daten mit GESIS Notebooks und Datorium</p>
           <p>Veranstalter: OASE, GESIS und ZBW - Leibniz-Informationszentrum Wirtschaft</p>
           <p>Ort: GESIS Köln</p>
         </div>
