englischce sprache und kontakt

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h3 class="title">Forschungsdatenmanagement 
           <q>Quantitative Wissenschaftsforschung</q>
         </h3>
-        <p>Drei aufeinander abgestimmte Trainingsevents zum qualitätsbewussten Umgang mit bibliometrischen Daten und Analysen für Projekte der BMBF-Förderlinie <a href="https://www.wihoforschung.de/de/quantitative-wissenschaftsforschung-1573.php"><q>Quantitative Wissenschaftsforschung</q></a>.</p>
+        <p>Drei aufeinander abgestimmte Trainingsevents zum qualitätsbewussten Umgang mit bibliometrischen Daten und Analysen für Projekte der BMBF-Förderlinie <a href="https://www.wihoforschung.de/de/quantitative-wissenschaftsforschung-1573.php"><q>Quantitative Wissenschaftsforschung</q></a>. Die Veranstaltungen sind in englischer Sprache.</p>
         <p>Gefördert durch das Bundesministerium für Bildung und Forschung.</p>
       </div>
       <div class="one-half column">
@@ -52,27 +52,33 @@
     <div class="container">
       <div class="row" style="margin-top: 15%">
         <div class="one-third column value">
-          <h5>12. März 2020</h5>
-          <h2 class="value-multiplier">Datenbanken</h2>
+          <h5>12 March 2020</h5>
+          <h2 class="value-multiplier">Databases</h2>
           <p class="value-description">Fallstricke beim Arbeiten mit bibliometrischen Datenbanken des Kompetenzzentrum Bibliometrie</p>
-          <p>Veranstalter: SINBRI, DZHW und KU Leuven</p>
-          <p>Ort: DZHW Berlin</p>
+          <p>Organiser: SINBRI, DZHW und KU Leuven</p>
+          <p>Place: DZHW Berlin</p>
         </div>
         <div class="one-third column value">
-          <h5>2. &mdash; 3. Juli 2020</h5>
-          <h2 class="value-multiplier">Dokumentation</h2>
-          <p class="value-description">Nachvollziehbare Dokumentation  quantitativer Analysen mit R Markdown und Jupyter Notebooks</p>
-          <p>Veranstalter: OAUNI, SUB Göttingen und Universität Bielefeld</p>
-          <p>Ort: SUB Göttingen</p>
+          <h5>2 &mdash; 3 July 2020</h5>
+          <h2 class="value-multiplier">Documentation</h2>
+          <p class="value-description">Reproducible and transparent documentation of data and quantitative analyses with R Markdown</p>
+          <p>Organiser: OAUNI, SUB Göttingen und Universität Bielefeld</p>
+          <p>Place: SUB Göttingen</p>
         </div>
         <div class="one-third column value">
           <h5>Herbst 2020</h5>
-          <h2 class="value-multiplier">Archivierung</h2>
+          <h2 class="value-multiplier">Archiving</h2>
           <p class="value-description">Reproduzierbarkeit und Archivierung quantitativer Analysen und Daten mit GESIS Notebooks und Datorium</p>
-          <p>Veranstalter: OASE, GESIS und ZBW - Leibniz-Informationszentrum Wirtschaft</p>
-          <p>Ort: GESIS Köln</p>
+          <p>Organiser: OASE, GESIS und ZBW - Leibniz-Informationszentrum Wirtschaft</p>
+          <p>Place: GESIS Köln</p>
         </div>
       </div>
+      <div class="row">
+        <div class="two-thirds column">
+          <h3>Contact</h3>
+        <p>In case of administrative queries, please contact </p>
+      </div>
+    </div>
     </div>
   </div> 
 
