--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
           <p>Place: SUB Göttingen</p>
         </div>
         <div class="one-third column value">
-          <h5>Herbst 2020</h5>
+          <h5>Winter 2020/21</h5>
           <h2 class="value-multiplier">Archiving</h2>
-          <p class="value-description">Reproduzierbarkeit und Archivierung quantitativer Analysen und Daten mit GESIS Notebooks und Datorium</p>
-          <p>Organiser: OASE, GESIS und ZBW - Leibniz-Informationszentrum Wirtschaft</p>
+          <p class="value-description">Reproducibility and archiving of quantitative analyzes and data with GESIS notebooks and datorium</p>
+          <p>Organiser: OASE, GESIS and ZBW - Leibniz-Informationszentrum Wirtschaft</p>
           <p>Place: GESIS Köln</p>
         </div>
       </div>
