--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
         <div class="one-third column value">
           <h5>12 March 2020</h5>
           <h2 class="value-multiplier">Databases</h2>
-          <p class="value-description">Fallstricke beim Arbeiten mit bibliometrischen Datenbanken des Kompetenzzentrum Bibliometrie</p>
-          <p>Organiser: SINBRI, DZHW und KU Leuven</p>
+          <p class="value-description">Opportunities and hurdles in bibliometric databases</p>
+          <p>Organiser: SINBRI, DZHW, Humboldt-Universität zu Berlin and KU Leuven</p>
           <p>Place: DZHW Berlin</p>
         </div>
         <div class="one-third column value">
           <h5>2 &mdash; 3 July 2020</h5>
           <h2 class="value-multiplier">Documentation</h2>
           <p class="value-description">Reproducible and transparent documentation of data and quantitative analyses with R Markdown</p>
-          <p>Organiser: OAUNI, SUB Göttingen und Universität Bielefeld</p>
+          <p>Organiser: OAUNI, SUB Göttingen and Universität Bielefeld</p>
           <p>Place: SUB Göttingen</p>
         </div>
         <div class="one-third column value">
