updated description of first workshop

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="one-third column value">
           <h5>12 March 2020</h5>
           <h2 class="value-multiplier">Databases</h2>
-          <p class="value-description">Opportunities and hurdles in bibliometric databases</p>
+          <p class="value-description">Opportunities and hurdles in WoS raw data</p>
           <p>Organiser: SINBRI, DZHW, Humboldt-Universität zu Berlin and KU Leuven</p>
           <p>Place: DZHW Berlin</p>
         </div>
