added DLR email

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="row">
         <div class="two-thirds column">
           <h3>Contact</h3>
-        <p>In case of administrative queries, please contact </p>
+        <p>In case of administrative queries, please contact <a href= "mailto:wihoforschung@dlr.de">wihoforschung@dlr.de</a></p>
       </div>
     </div>
     </div>
