Kontakt Email für SINBRI

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h3 class="title">Forschungsdatenmanagement 
           <q>Quantitative Wissenschaftsforschung</q>
         </h3>
-        <p>Drei aufeinander abgestimmte Trainingsevents zum qualitätsbewussten Umgang mit bibliometrischen Daten und Analysen für Projekte der BMBF-Förderlinie <a href="https://www.wihoforschung.de/de/quantitative-wissenschaftsforschung-1573.php"><q>Quantitative Wissenschaftsforschung</q></a>. Die Veranstaltungen sind in englischer Sprache.</p>
+        <p>Drei aufeinander abgestimmte Trainingsevents zum qualitätsbewussten Umgang mit bibliometrischen Daten und Analysen für Projekte der BMBF-Förderlinie <a href="https://www.wihoforschung.de/de/quantitative-wissenschaftsforschung-1573.php"><q>Quantitative Wissenschaftsforschung</q></a>. Die Veranstaltungen sind in englischer Sprache. Es stehen 15-20 Plätze pro Veranstaltung zur Verfügung (Vergabe via First come, first served).</p>
         <p>Gefördert durch das Bundesministerium für Bildung und Forschung.</p>
       </div>
       <div class="one-half column">
@@ -57,6 +57,8 @@
           <p class="value-description">Opportunities and hurdles in WoS raw data</p>
           <p>Organiser: SINBRI, DZHW, Humboldt-Universität zu Berlin and KU Leuven</p>
           <p>Place: DZHW Berlin</p>
+          <p>Registrierung: <a href= "mailto:stahlschmidt@dzhw.eu">stahlschmidt@dzhw.eu</a></p>
+          
         </div>
         <div class="one-third column value">
           <h5>2 &mdash; 3 July 2020</h5>
