style suggestion @ahobert

--- a/index.html
+++ b/index.html
@@ -52,24 +52,26 @@
     <div class="container">
       <div class="row" style="margin-top: 15%">
         <div class="one-third column value">
-          <h5>12 March 2020</h5>
           <h2 class="value-multiplier">Databases</h2>
+          <hr>
+          <h5>12 March 2020</h5>
           <p class="value-description">Opportunities and hurdles in WoS raw data</p>
           <p>Organiser: SINBRI, DZHW, Humboldt-Universität zu Berlin and KU Leuven</p>
           <p>Place: DZHW Berlin</p>
-          <p>Registrierung: <a href= "mailto:stahlschmidt@dzhw.eu">stahlschmidt@dzhw.eu</a></p>
-          
+          <p>Registration: <a href= "mailto:stahlschmidt@dzhw.eu">stahlschmidt@dzhw.eu</a></p>
         </div>
         <div class="one-third column value">
-          <h5>2 &mdash; 3 July 2020</h5>
           <h2 class="value-multiplier">Documentation</h2>
+          <hr>
+          <h5>2 &mdash; 3 July 2020</h5>
           <p class="value-description">Reproducible and transparent documentation of data and quantitative analyses with R Markdown</p>
           <p>Organiser: OAUNI, SUB Göttingen and Universität Bielefeld</p>
           <p>Place: SUB Göttingen</p>
         </div>
         <div class="one-third column value">
-          <h5>Winter 2020/21</h5>
           <h2 class="value-multiplier">Archiving</h2>
+          <hr>
+          <h5>Winter 2020/21</h5>
           <p class="value-description">Reproducibility and archiving of quantitative analyzes and data with GESIS notebooks and datorium</p>
           <p>Organiser: OASE, GESIS and ZBW - Leibniz-Informationszentrum Wirtschaft</p>
           <p>Place: GESIS Köln</p>
