--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <p class="value-description">Reproducible and transparent documentation of data and quantitative analyses with R Markdown</p>
           <p>Organiser: OAUNI, SUB Göttingen and Universität Bielefeld</p>
           <p>Place: SUB Göttingen</p>
+          <p>Registration: <a href= "mailto:hobert@sub.uni-goettingen.de">hobert@sub.uni-goettingen.de</a></p>
         </div>
         <div class="one-third column value">
           <h2 class="value-multiplier">Archiving</h2>
