--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
           <p class="value-description">Reproducibility and archiving of quantitative analyzes and data with GESIS notebooks and datorium</p>
           <p>Organiser: OASE, GESIS and ZBW - Leibniz-Informationszentrum Wirtschaft</p>
           <p>Place: GESIS Köln</p>
+		  <p>Registration: <a href= "mailto:philipp.mayr@gesis.org">philipp.mayr@gesis.org</a></p>
         </div>
       </div>
       <div class="row">
