--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
           <p>Organiser: SINBRI, DZHW, Humboldt-Universität zu Berlin and KU Leuven</p>
           <p>Place: DZHW Berlin</p>
           <p>Registration: <a href= "mailto:stahlschmidt@dzhw.eu">stahlschmidt@dzhw.eu</a></p>
+	  <p>Programme: <a href= "images/FDM_Workshop_1.pdf" target="_blank">pdf</a></p>
         </div>
         <div class="one-third column value">
           <h2 class="value-multiplier">Documentation</h2>
