--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
           <p class="value-description">Opportunities and hurdles in WoS raw data</p>
           <p>Organiser: SINBRI, DZHW, Humboldt-Universität zu Berlin and KU Leuven</p>
           <p>Place: DZHW Berlin</p>
-          <p>Registration: <a href= "mailto:stahlschmidt@dzhw.eu">stahlschmidt@dzhw.eu</a></p>
+          <p>Registration: <a href= "mailto:stahlschmidt@dzhw.eu">stahlschmidt@dzhw.eu</a><br>
+		(Deadline: 20 February 2020)</p>
 	  <p>Programme: <a href= "images/FDM_Workshop_1.pdf" target="_blank">pdf</a></p>
         </div>
         <div class="one-third column value">
