--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <p>Organiser: OAUNI, SUB Göttingen and Universität Bielefeld</p>
           <p>Place: SUB Göttingen</p>
           <p>Registration: <a href= "mailto:hobert@sub.uni-goettingen.de">hobert@sub.uni-goettingen.de</a></p>
-          <p><a href="https://pad.gwdg.de/RMarkdownBloggingWorkshop">Programme<a/><p>
+          <p><a href="https://pad.gwdg.de/RMarkdownBloggingWorkshop">Programme<a/></p>
         </div>
         <div class="one-third column value">
           <h2 class="value-multiplier">Archiving</h2>
