--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
         <div class="one-third column value">
           <h2 class="value-multiplier">Archiving</h2>
           <hr>
-          <h5>Winter 2020/21</h5>
-          <p class="value-description">Reproducibility and archiving of quantitative analyzes and data with GESIS notebooks and datorium</p>
+          <h5>December 2020</h5>
+          <p class="value-description">Reproducibility and archiving of quantitative analyses and data with mybinder.org / GESIS Notebooks and SowiDataNet|datorium</p>
           <p>Organiser: OASE, GESIS and ZBW - Leibniz-Informationszentrum Wirtschaft</p>
-          <p>Place: GESIS Köln</p>
+          <p>Place: GESIS -- Leibniz Institute for the Social Sciences </p>
 		  <p>Registration: <a href= "mailto:philipp.mayr@gesis.org">philipp.mayr@gesis.org</a></p>
         </div>
       </div>
