--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
         <div class="one-third column value">
           <h2 class="value-multiplier">Archiving</h2>
           <hr>
-          <h5>December 2020</h5>
-          <p class="value-description">Reproducibility and archiving of quantitative analyses and data with mybinder.org / GESIS Notebooks and SowiDataNet|datorium</p>
+          <h5>3 &mdash; 4 December 2020</h5>
+          <p class="value-description">Reproducibility and archiving of quantitative analyses and data with mybinder.org, GESIS Notebooks and SowiDataNet|datorium</p>
           <p>Organiser: OASE, GESIS and ZBW - Leibniz-Informationszentrum Wirtschaft</p>
           <p>Place: GESIS -- Leibniz Institute for the Social Sciences </p>
 		  <p>Registration: <a href= "mailto:philipp.mayr@gesis.org">philipp.mayr@gesis.org</a></p>
+		  <p><a href="https://bit.ly/GESISNotebooks-Datorium">Introduction</a></p>
         </div>
       </div>
       <div class="row">
